# calculatorvadim

./: .gitignore  Dockerfile  LICENSE  README.md  calculatorvadim.py  pyproject.toml  test_calculatorvadim.py
